--- a/simplechat/webclient/index.html
+++ b/simplechat/webclient/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE HTML>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <title>Simple Chat</title>
   </head>
   <body>
     <ul id="messages"></ul>
