--- a/simplechatrooms/webclient/index.html
+++ b/simplechatrooms/webclient/index.html
@@ -5,7 +5,11 @@
     <title>Simple Chat With Rooms</title>
   </head>
   <body>
-    <ul id="messages"></ul>
+    <div class="messages container">
+      <div class="scrollable">
+        <ul id="messages"></ul>
+      </div>
+    </div>
     <div class="rooms container">
       <ul id="rooms">
         <li id="root"><a href="#root">Root</a></li>
@@ -14,9 +18,11 @@
         <li id="room3"><a href="#room3">Room #3</a></li>
       </ul>
     </div>
-    <form action="">
-      <input id="message" autocomplete="off" />
-      <button>Send</button>
+    <form action="" class="message container">
+      <div class="row">
+        <div id="divMessage"><input id="message" autocomplete="off" /></div>
+        <div id="divSend"><button>Send</button></div>
+      </div>
     </form>
     <script src="http://localhost:8080/socket.io.min.js"></script>
     <script src="http://localhost:8080/jquery.min.js"></script>
