--- a/simplechatrooms/webclient/index.html
+++ b/simplechatrooms/webclient/index.html
@@ -10,18 +10,32 @@
         <ul id="messages"></ul>
       </div>
     </div>
+    <div class="mails container">
+      <div class="scrollable">
+        <ul id="mails"></ul>
+      </div>
+    </div>
     <div class="rooms container">
-      <ul id="rooms">
-        <li id="root"><a href="#root">Root</a></li>
-        <li id="room1"><a href="#room1">Room #1</a></li>
-        <li id="room2"><a href="#room2">Room #2</a></li>
-        <li id="room3"><a href="#room3">Room #3</a></li>
-      </ul>
+      <div class="scrollable">
+        <div class="row">
+          <ul id="rooms">
+            <li id="root"><a href="#root">Root</a></li>
+            <li id="room1"><a href="#room1">Room #1</a></li>
+            <li id="room2"><a href="#room2">Room #2</a></li>
+            <li id="room3"><a href="#room3">Room #3</a></li>
+          </ul>
+        </div>
+        <div class="row">
+          <div class="notification column">
+            <div id="divNotification"><button><span id="maillabel">Open Mails:</span><span id="mailcount"> 0</span></button></div>
+          </div>
+        </div>
+      </div>
     </div>
     <form action="" class="message container">
       <div class="row">
-        <div id="divMessage"><input id="message" autocomplete="off" /></div>
-        <div id="divSend"><button>Send</button></div>
+        <div id="divMessage" class="column input-message"><input id="message" autocomplete="off" /></div>
+        <div id="divSend" class="column btn-send"><button>Send</button></div>
       </div>
     </form>
     <script src="http://localhost:8080/socket.io.min.js"></script>
